<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"

    android:weightSum="4"
    >

    <TextView
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:background="@color/grey"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="20dp"
        android:paddingRight="20dp">


    <Button
        android:id="@+id/number_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_1"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/number_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_2"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/number_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_3"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/operator_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_add"
        android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="20dp"
        android:paddingRight="20dp">

    <Button
        android:id="@+id/number_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_4"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/number_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_5"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/number_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_6"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/operator_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_subtract"
        android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="20dp"
        android:paddingRight="20dp">

    <Button
        android:id="@+id/number_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_7"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/number_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_8"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/number_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_9"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/operator_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_multiply"
        android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="20dp"
        android:paddingRight="20dp">

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_text"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/number_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_0"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/operator_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_equals"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/operator_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_divide"
        android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/advanced_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"

        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        android:visibility="gone">

        <Button
            android:id="@+id/operator_modulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator_modulo"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/operator_POW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator_POW"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/operator_MIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator_MIN"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/operator_MAX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator_MAX"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/version_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        style="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:text="@string/advance_mode"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"/>

</LinearLayout>